// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoilingVerdict should match enzyme shallow snapshot 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`BoilingVerdict should match enzyme shallow snapshot 2`] = `
<p>
  The water would boil.
</p>
`;
